<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/standard_size"
            android:layout_height="@dimen/standard_size"
            app:layout_constraintBottom_toTopOf="@id/nickname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avatar_image_placeholder"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/nickname"
            android:layout_width="@dimen/standard_size"
            android:layout_height="@dimen/small_medium_size"
            android:layout_marginTop="@dimen/standard_margin"
            app:layout_constraintBottom_toTopOf="@id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar"
            android:gravity="center"
            android:hint="@string/nickname"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/loginRegisterTextColor"
            android:background="@drawable/rounded_edittext"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/password"
            android:layout_width="@dimen/standard_size"
            android:layout_height="@dimen/small_medium_size"
            android:layout_marginTop="@dimen/standard_margin"
            app:layout_constraintBottom_toTopOf="@id/profession"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nickname"
            android:gravity="center"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/loginRegisterTextColor"
            android:background="@drawable/rounded_edittext"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/profession"
            android:layout_width="@dimen/standard_size"
            android:layout_height="@dimen/small_medium_size"
            android:layout_marginTop="@dimen/standard_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:hint="@string/job"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/loginRegisterTextColor"
            android:background="@drawable/rounded_edittext"
            tools:ignore="MissingConstraints"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin"
        android:backgroundTint="@color/blue" />

</androidx.constraintlayout.widget.ConstraintLayout>